--- a/JavaApplication7/src/view/FrmFind.form
+++ b/JavaApplication7/src/view/FrmFind.form
@@ -67,7 +67,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="T&#xea;n gi&#xe1;o vi&#xea;n mu&#x1ed1;n t&#xec;m ki&#x1ebf;m:"/>
+            <Property name="text" type="java.lang.String" value="T&#xea;n mu&#x1ed1;n t&#xec;m ki&#x1ebf;m:"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
